# simple-mcp-server

./: .gitignore  Cargo.toml
.claude/: settings.local.json
mcp-sdk/: Cargo.toml
mcp-sdk/src/: error.rs  lib.rs  macros.rs  notifications.rs  prelude.rs  request.rs  response.rs  server.rs  tools.rs
src/: main.rs
