[package]
name = "mcp-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1.0", features = ["process", "time", "macros", "rt-multi-thread"] }
async-trait = "0.1.89"
tokio-stream = "0.1.17"

